Update Capstone Project - The Battle of Neighborhoods W2  Chinese.ipynb

--- a/Capstone Project - The Battle of Neighborhoods W2  Chinese.ipynb
+++ b/Capstone Project - The Battle of Neighborhoods W2  Chinese.ipynb
@@ -280,8 +280,8 @@
     "    #set variables\n",
     "    radius=1000\n",
     "    LIMIT=100\n",
-    "    CLIENT_ID = 'XXNEZB1OBELFJWEI0RC3CA5FVFQEAUJPEPACBB5CTT1WRBE1'\n",
-    "    CLIENT_SECRET = '1S420RUZSANGPT1TFHEJ1GPMR1KFAU4OVQMOI0XEUG52LN5C'\n",
+    "    CLIENT_ID = ''\n",
+    "    CLIENT_SECRET = ''\n",
     "    VERSION = '20180605' \n",
     "    \n",
     "    #url to fetch data from foursquare api\n",
@@ -327,8 +327,8 @@
    "source": [
     "def get_venue_details(venue_id): \n",
     "    \n",
-    "    CLIENT_ID = 'XXNEZB1OBELFJWEI0RC3CA5FVFQEAUJPEPACBB5CTT1WRBE1'\n",
-    "    CLIENT_SECRET = '1S420RUZSANGPT1TFHEJ1GPMR1KFAU4OVQMOI0XEUG52LN5C'\n",
+    "    CLIENT_ID = ''\n",
+    "    CLIENT_SECRET = ''\n",
     "    VERSION = '20180605' # Foursquare API version\n",
     "    \n",
     "    #url to fetch data from foursquare api\n",
